
ADD_LIBRARY ( PyIex ${LIB_TYPE}
	PyIex.cpp
)

TARGET_LINK_LIBRARIES ( PyIex
	${PYTHON_LIBRARIES}
)

INSTALL ( TARGETS PyIex
	DESTINATION
	lib
)

ADD_LIBRARY ( iex SHARED
	iexmodule.cpp
)

IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET_TARGET_PROPERTIES ( iex
        PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
    )
ELSE ()
    SET_TARGET_PROPERTIES ( iex
        PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
    )
ENDIF()

IF (${LIB_TYPE} EQUAL "STATIC")
    SET_TARGET_PROPERTIES ( PyIex
        PROPERTIES DEFINE_SYMBOL "PYIEX_EXPORTS"
    )
ELSE ()
    add_definitions(-DPLATFORM_BUILD_STATIC)
ENDIF()

TARGET_LINK_LIBRARIES ( iex
	PyIex
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS iex
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

