
ADD_LIBRARY ( imathnumpy SHARED
    imathnumpymodule.cpp
)

IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET_TARGET_PROPERTIES ( imathnumpy
        PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
    )
ELSE ()
    SET_TARGET_PROPERTIES ( imathnumpy
        PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
    )
ENDIF()

message("NumPy Include dirs = " ${NUMPY_INCLUDE_DIRS})

INCLUDE_DIRECTORIES (
	${NUMPY_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES ( imathnumpy
	PyImath
	PyIex
	Imath${ILMBASE_LIBSUFFIX}
	Iex${ILMBASE_LIBSUFFIX}
	${Boost_LIBRARIES}
)

INSTALL ( TARGETS imathnumpy
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

