
ADD_LIBRARY ( imathsimple SHARED
    imathmodule.cpp
)

IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET_TARGET_PROPERTIES ( imath
        PROPERTIES PREFIX "" SUFFIX ".so" BUILD_WITH_INSTALL_RPATH ON
    )
ELSE ()
    SET_TARGET_PROPERTIES ( imathsimple
        PROPERTIES PREFIX "" SUFFIX ".pyd" BUILD_WITH_INSTALL_RPATH ON
    )
ENDIF()

TARGET_LINK_LIBRARIES ( imathsimple
	PyImath
	PyIex
	Imath${ILMBASE_LIBSUFFIX}
	Iex${ILMBASE_LIBSUFFIX}
	#${Boost_LIBRARIES}
)

INSTALL ( TARGETS imathsimple
	DESTINATION lib/python${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}/site-packages
)

